--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 // reused
 @use "components/visually-hidden";
 @use "components/centralizer";
+@use "components/button";
 
 
 // other
@@ -12,3 +13,4 @@
 @use "components/header";
 @use "components/main-navigation";
 @use "components/user-panel";
+@use "components/banner";
