--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,9 @@ $color-text-dark: #1b1a17;
 $color-text-default: rgba($color-text-dark, 82%);
 $color-special-1: #d4b098;
 $color-special-2: #e6c8b4;
+$color-special-3: #8b8371;
+$color-background-light: #eae3d4;
+$color-background-dark: #444240;
 
 // viewports
 $mobile-width: 320px;
