--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -20,6 +20,8 @@
   font-family: var.$font-family-secondary;
   font-size: 32px;
   line-height: 1.3;
+  font-weight: 400;
+  color: var.$color-text-dark;
 }
 
 @mixin line-bar(
@@ -32,7 +34,7 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0.6em;
+    top: 0.7em;
     #{$side}: -$line-width + $offset;
     width: $line-width;
     height: 1px;
