--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,7 +12,10 @@ $color-text-default: rgba($color-text-dark, 82%);
 $color-special-1: #d4b098;
 $color-special-2: #e6c8b4;
 $color-special-3: #8b8371;
-$color-background-light: #eae3d4;
+$color-special-4: #c4c0b6;
+$color-background-light-1: #eae3d4;
+$color-background-light-2: #e2d0c4;
+$color-background-extra-light: #fdfdfb;
 $color-background-dark: #444240;
 
 // viewports
