--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,9 +15,13 @@ $color-special-3: #8b8371;
 $color-special-4: #c4c0b6;
 $color-background-light-1: #eae3d4;
 $color-background-light-2: #e2d0c4;
+$color-background-light-3: #f7f5ef;
 $color-background-extra-light: #fdfdfb;
 $color-background-dark: #444240;
 
 // viewports
 $mobile-width: 320px;
 $desktop-width: 1366px;
+
+// sizes
+$slider-width: 521px;
