--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,10 +9,12 @@ $line-height-default: 1.5;
 // colors
 $color-text-dark: #1b1a17;
 $color-text-default: rgba($color-text-dark, 82%);
+$color-text-light: rgba(#ffffff, 75%);
 $color-special-1: #d4b098;
 $color-special-2: #e6c8b4;
 $color-special-3: #8b8371;
 $color-special-4: #c4c0b6;
+$color-special-5: #5c5c50;
 $color-background-light-1: #eae3d4;
 $color-background-light-2: #e2d0c4;
 $color-background-light-3: #f7f5ef;
