Добавляет адаптив шапки

--- a/source/sass/components/centralizer.scss
+++ b/source/sass/components/centralizer.scss
@@ -2,7 +2,7 @@
 
 .centralizer {
   width: 100%;
-  max-width: var.$desktop-width;
+  max-width: var.$desktop-max-width;
   margin: 0 auto;
   padding: 0 98px;
 }
