--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -1,8 +1,6 @@
 .header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  position: relative;
+  min-height: 85px;
   padding-top: 18px;
   padding-bottom: 18px;
   line-height: 1.2;
