--- a/source/sass/components/centralizer.scss
+++ b/source/sass/components/centralizer.scss
@@ -4,5 +4,5 @@
   width: 100%;
   max-width: var.$desktop-max-width;
   margin: 0 auto;
-  padding: 0 98px;
+  padding: 0 clamp(20px, 7.2vw, 98px);
 }
