--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -32,4 +32,6 @@ $mobile-max-width: $tablet-min-width - 1px;
 $mobile-min-width: 320px;
 
 // sizes
+$card-image-size: 313px;
+$card-width: 370px;
 $slider-width: 521px;
