--- a/source/sass/components/catalog.scss
+++ b/source/sass/components/catalog.scss
@@ -4,6 +4,12 @@
 .catalog {
   padding-top: 80px;
   padding-bottom: 86px;
+
+  @media (max-width: var.$mobile-max-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .catalog__title {
@@ -31,12 +37,31 @@
     height: 1px;
     background-color: var.$color-special-4;
   }
+
+  @media (max-width: var.$mobile-max-width) {
+    margin-right: auto;
+    order: 1;
+  }
 }
 
 .catalog__list {
   @include mixins.list-style-reset;
 
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(var.$card-width, 1fr));
   gap: 30px;
+  justify-items: center;
+
+  @media (max-width: 1100px) {
+    grid-template-columns: repeat(auto-fit, minmax(var.$card-image-size, 1fr));
+  }
+
+  @media (max-width: var.$mobile-max-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
 }
