--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -34,6 +34,10 @@
   line-height: 1.3;
   font-weight: 400;
   color: var.$color-text-dark;
+
+  @media (max-width: var.$mobile-max-width) {
+    font-size: 24px;
+  }
 }
 
 @mixin line-bar(
