--- a/source/sass/components/button.scss
+++ b/source/sass/components/button.scss
@@ -3,7 +3,7 @@
 
 .button {
   display: inline-block;
-  max-width: max(400px, 100%);
+  max-width: 400px;
   margin: 0;
   padding: 26px 38px;
 
@@ -35,5 +35,10 @@
 
   &--secondary {
     background-color: var.$color-special-1;
+  }
+
+  @media (max-width: var.$tablet-max-width) {
+    max-width: 100%;
+    font-size: 16px;
   }
 }
