--- a/source/sass/components/centralizer.scss
+++ b/source/sass/components/centralizer.scss
@@ -1,8 +1,9 @@
 @use "../variables" as var;
+@use "../mixins";
 
 .centralizer {
   width: 100%;
   max-width: var.$desktop-max-width;
-  margin: 0 auto;
-  padding: 0 clamp(20px, 7.2vw, 98px);
+
+  @include mixins.centralizer;
 }
