--- a/source/sass/components/subscribe.scss
+++ b/source/sass/components/subscribe.scss
@@ -1,12 +1,29 @@
 @use "../variables" as var;
 @use "../mixins";
 
+$gallery-width: 630px;
+
 .subscribe {
   display: flex;
   justify-content: space-between;
   padding-top: 80px;
   padding-bottom: 90px;
   color: var.$color-background-dark;
+
+  @media (max-width: var.$tablet-max-width) {
+    display: block;
+  }
+
+  @media (max-width: var.$mobile-max-width) {
+    display: grid;
+    justify-content: stretch;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  @media (max-width: $gallery-width) {
+    padding-bottom: 0;
+  }
 }
 
 .subscribe__content {
@@ -14,6 +31,33 @@
   margin-right: 70px;
   padding-top: 140px;
   padding-bottom: 50px;
+
+  @media (max-width: var.$tablet-max-width) {
+    max-width: $gallery-width;
+    margin: 0 auto 25px;
+    padding: 0;
+  }
+
+  @media (max-width: var.$mobile-max-width) {
+    @include mixins.centralizer;
+
+    width: 100%;
+    margin-bottom: 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+
+    background-image: linear-gradient(
+      to bottom,
+      #ffffff 0,
+      rgba(#ffffff, 0.8) 40%,
+      rgba(#ffffff, 0.4)
+    );
+
+    grid-row: 1;
+    grid-column: 1;
+    order: 1;
+  }
 }
 
 .subscribe__title {
@@ -31,6 +75,10 @@
 .subscribe__socials {
   margin-top: 90px;
   margin-left: -10px;
+
+  @media (max-width: var.$tablet-max-width) {
+    margin-top: 40px;
+  }
 }
 
 .subscribe__gallary {
@@ -43,11 +91,44 @@
   gap: 10px;
 
   min-width: fit-content;
-  max-width: 630px;
+  max-width: $gallery-width;
+
+  @media (max-width: var.$tablet-max-width) {
+    margin: 0 auto;
+  }
+
+  @media (max-width: var.$mobile-max-width) {
+    grid-row: 1;
+    grid-column: 1;
+  }
+
+  @media (max-width: $gallery-width) {
+    width: 100%;
+
+    grid-auto-flow: row dense;
+    gap: 0;
+  }
 }
 
 .subscribe__image-container {
   &--large {
     grid-row: span 2;
+  }
+
+  @media (max-width: $gallery-width) {
+    &--large {
+      grid-row: span 1;
+      grid-column: span 2;
+      order: -1;
+    }
+  }
+}
+
+.subscribe__image {
+  @media (max-width: $gallery-width) {
+    width: 100%;
+    height: 100%;
+    max-height: 400px;
+    object-fit: cover;
   }
 }
