--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -18,6 +18,12 @@
   list-style-type: none;
 }
 
+@mixin centralizer {
+  margin: 0 auto;
+  padding-left: var.$base-horizontal-padding;
+  padding-right: var.$base-horizontal-padding;
+}
+
 @mixin font(
   $font-family: var.$font-family-primary,
   $font-size: var.$font-size-default,
