--- a/source/sass/components/subscribe.scss
+++ b/source/sass/components/subscribe.scss
@@ -17,12 +17,10 @@ $gallery-width: 630px;
   @media (max-width: var.$mobile-max-width) {
     display: grid;
     justify-content: stretch;
+    padding-top: 40px;
+    padding-bottom: 0;
     padding-left: 0;
     padding-right: 0;
-  }
-
-  @media (max-width: $gallery-width) {
-    padding-bottom: 0;
   }
 }
 
@@ -42,6 +40,7 @@ $gallery-width: 630px;
     @include mixins.centralizer;
 
     width: 100%;
+    max-width: 100%;
     margin-bottom: 0;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -93,11 +92,16 @@ $gallery-width: 630px;
   min-width: fit-content;
   max-width: $gallery-width;
 
+  align-self: center;
+
   @media (max-width: var.$tablet-max-width) {
     margin: 0 auto;
   }
 
   @media (max-width: var.$mobile-max-width) {
+    width: 100%;
+    max-width: 100%;
+
     grid-row: 1;
     grid-column: 1;
   }
@@ -125,6 +129,12 @@ $gallery-width: 630px;
 }
 
 .subscribe__image {
+  @media (max-width: var.$mobile-max-width) {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   @media (max-width: $gallery-width) {
     width: 100%;
     height: 100%;
